[package]
name = "tokio-on-browser"
version = "0.1.0"
authors = ["xusd320 <xusd320@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.50"
console_error_panic_hook = { version = "0.1.7" }
tokio = { version = "1.47.1", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "tracing",
] }
web-sys = { version = "0.3.77", features = ["console"] }
tokio-fs-ext = { version = "0.6.0", features = ["opfs_offload", "opfs_watch"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-web = "0.1.3"
tracing = "0.1.41"
futures = "0.3.31"


[profile.wasm-dev]
inherits = "release"
opt-level = 1
lto = false
strip = "none"
incremental = true
codegen-units = 256
panic = "unwind"
debug = 1


[patch.crates-io]
tokio = { git = "https://github.com/utooland/tokio.git" }
